RESOLVED FIXED296167
AX: assert if AXIsolatedTree::applyPendingRootNodeLocked results in unreachable nodes
https://bugs.webkit.org/show_bug.cgi?id=296167
Summary AX: assert if AXIsolatedTree::applyPendingRootNodeLocked results in unreachab...
Dominic Mazzoni
Reported 2025-07-17 22:46:05 PDT
We have tracked down the source of missing content to AXIsolatedTree::applyPendingRootNodeLocked setting the root node to an iframe's scroll view by mistake. This assertion would catch that.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-07-17 22:46:15 PDT
Dominic Mazzoni
Comment 2 2025-07-17 22:51:11 PDT
EWS
Comment 3 2025-07-18 21:43:26 PDT
Committed 297632@main (1530f996d732): <https://commits.webkit.org/297632@main> Reviewed commits have been landed. Closing PR #48224 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.