AX: assert if AXIsolatedTree::applyPendingRootNodeLocked results in unreachable nodes https://bugs.webkit.org/show_bug.cgi?id=296167 rdar://156121932

Reviewed by Tyler Wilcock and Andres Gonzalez.

We have tracked down the source of one missing content bug to
AXIsolatedTree::applyPendingRootNodeLocked setting the root node to an
iframe's scroll view by mistake. This assertion would catch if that
were to happen again.

* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::applyPendingRootNodeLocked):

Canonical link: https://commits.webkit.org/297632@main